# paper_crawling

./: .gitignore  README.md  pyproject.toml  summarize_structure.md
.github/workflows/: pages.yml
src/llm_paper_crawler/: __init__.py  cli.py  export.py  filters.py  models.py  pipeline.py  site.py  summarizer.py
src/llm_paper_crawler/sources/: __init__.py  arxiv.py  base.py  openreview.py  proceedings.py
