[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-paper-crawling"
version = "0.1.0"
description = "Crawler for LLM-related academic papers across arXiv, conference proceedings, and OpenReview."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "openreview-py>=1.52.0",
  "requests>=2.31.0",
]

[project.scripts]
llm-paper-crawl = "llm_paper_crawler.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
